# bupt_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: Dt35.msg  Joystick.msg
srv/: ActionControl.srv  ActionInfo.srv  AnalyseTrajetory.srv  ArgiVisionDetect.srv  CalculateRpm.srv  ControlState.srv  FineAdjust.srv  Float2Float.srv  GetAveOdom.srv  JoyStickInteraction.srv  OdomCorrect.srv  R1TopControl.srv  R2TopControl2025.srv  ShootControl.srv  ShootModelFitting.srv  ShootParams.srv
